crates/pipeline/src/stages/compile_logic/projection_fixtures/snapshots/datalog@confidence-scoped-axiom.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: arts.datalog
---
% GENERATED by `gmeow logic compile` — DO NOT EDIT.
% Datalog projection of the canonical logic: program.

% === Ground facts (axioms) ===
type("https://example.org/confidence-scoped-axiom/Animal", "https://blackcatinformatics.ca/logic/Kind", "default").
subClassOf("https://example.org/confidence-scoped-axiom/Animal", "https://example.org/confidence-scoped-axiom/Organism", "epistemic").
type("https://example.org/confidence-scoped-axiom/Bird", "https://blackcatinformatics.ca/logic/SubKind", "default").
subClassOf("https://example.org/confidence-scoped-axiom/Bird", "https://example.org/confidence-scoped-axiom/Animal", "default").
type("https://example.org/confidence-scoped-axiom/Organism", "https://blackcatinformatics.ca/logic/Kind", "default").
confidence("https://example.org/confidence-scoped-axiom/stmt1", '0.9', "default").
modality("https://example.org/confidence-scoped-axiom/stmt1", "https://blackcatinformatics.ca/logic/epistemic", "default").

% === Rules ===
