crates/pipeline/src/stages/compile_logic/projection_fixtures/snapshots/datalog@kind-hierarchy.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: arts.datalog
---
% GENERATED by `gmeow logic compile` — DO NOT EDIT.
% Datalog projection of the canonical logic: program.

% === Ground facts (axioms) ===
type("https://example.org/kind-hierarchy/Animal", "https://blackcatinformatics.ca/logic/Kind", "default").
type("https://example.org/kind-hierarchy/Dog", "https://blackcatinformatics.ca/logic/SubKind", "default").
subClassOf("https://example.org/kind-hierarchy/Dog", "https://example.org/kind-hierarchy/Mammal", "default").
type("https://example.org/kind-hierarchy/Mammal", "https://blackcatinformatics.ca/logic/SubKind", "default").
subClassOf("https://example.org/kind-hierarchy/Mammal", "https://example.org/kind-hierarchy/Animal", "default").
type("https://example.org/kind-hierarchy/Pet", "https://blackcatinformatics.ca/logic/Role", "default").
subClassOf("https://example.org/kind-hierarchy/Pet", "https://example.org/kind-hierarchy/Animal", "default").

% === Rules ===
