crates/pipeline/src/stages/compile_logic/projection_fixtures/snapshots/datalog@relator-mediation.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: arts.datalog
---
% GENERATED by `gmeow logic compile` — DO NOT EDIT.
% Datalog projection of the canonical logic: program.

% === Ground facts (axioms) ===
type("https://example.org/relator-mediation/Employment", "https://blackcatinformatics.ca/logic/Relator", "default").
type("https://example.org/relator-mediation/Organization", "https://blackcatinformatics.ca/logic/Kind", "default").
type("https://example.org/relator-mediation/Person", "https://blackcatinformatics.ca/logic/Kind", "default").
type("https://example.org/relator-mediation/employedBy", "https://blackcatinformatics.ca/logic/Role", "default").
domain("https://example.org/relator-mediation/employedBy", "https://example.org/relator-mediation/Employment", "default").
range("https://example.org/relator-mediation/employedBy", "https://example.org/relator-mediation/Organization", "default").
type("https://example.org/relator-mediation/employs", "https://blackcatinformatics.ca/logic/Role", "default").
domain("https://example.org/relator-mediation/employs", "https://example.org/relator-mediation/Employment", "default").
inverseOf("https://example.org/relator-mediation/employs", "https://example.org/relator-mediation/employedBy", "default").
range("https://example.org/relator-mediation/employs", "https://example.org/relator-mediation/Person", "default").

% === Rules ===
