crates/pipeline/src/stages/compile_logic/projection_fixtures/snapshots/n3@kind-hierarchy.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: arts.n3
---
@prefix logic: <https://blackcatinformatics.ca/logic/> .
@prefix gmeow: <https://blackcatinformatics.ca/gmeow/> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix owl: <http://www.w3.org/2002/07/owl#> .
@prefix log: <http://www.w3.org/2000/10/swap/log#> .

# GENERATED by `gmeow logic compile` — DO NOT EDIT.
# N3 projection of the canonical logic: program.

# === Axioms ===
<https://example.org/kind-hierarchy/Animal> a <https://blackcatinformatics.ca/logic/Kind> .
<https://example.org/kind-hierarchy/Dog> a <https://blackcatinformatics.ca/logic/SubKind> .
<https://example.org/kind-hierarchy/Dog> <https://blackcatinformatics.ca/logic/subClassOf> <https://example.org/kind-hierarchy/Mammal> .
<https://example.org/kind-hierarchy/Mammal> a <https://blackcatinformatics.ca/logic/SubKind> .
<https://example.org/kind-hierarchy/Mammal> <https://blackcatinformatics.ca/logic/subClassOf> <https://example.org/kind-hierarchy/Animal> .
<https://example.org/kind-hierarchy/Pet> a <https://blackcatinformatics.ca/logic/Role> .
<https://example.org/kind-hierarchy/Pet> <https://blackcatinformatics.ca/logic/subClassOf> <https://example.org/kind-hierarchy/Animal> .

# === Rules ===
