crates/pipeline/src/stages/compile_logic/projection_fixtures/snapshots/n3@relator-mediation.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: arts.n3
---
@prefix logic: <https://blackcatinformatics.ca/logic/> .
@prefix gmeow: <https://blackcatinformatics.ca/gmeow/> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix owl: <http://www.w3.org/2002/07/owl#> .
@prefix log: <http://www.w3.org/2000/10/swap/log#> .

# GENERATED by `gmeow logic compile` — DO NOT EDIT.
# N3 projection of the canonical logic: program.

# === Axioms ===
<https://example.org/relator-mediation/Employment> a <https://blackcatinformatics.ca/logic/Relator> .
<https://example.org/relator-mediation/Organization> a <https://blackcatinformatics.ca/logic/Kind> .
<https://example.org/relator-mediation/Person> a <https://blackcatinformatics.ca/logic/Kind> .
<https://example.org/relator-mediation/employedBy> a <https://blackcatinformatics.ca/logic/Role> .
<https://example.org/relator-mediation/employedBy> <https://blackcatinformatics.ca/logic/domain> <https://example.org/relator-mediation/Employment> .
<https://example.org/relator-mediation/employedBy> <https://blackcatinformatics.ca/logic/range> <https://example.org/relator-mediation/Organization> .
<https://example.org/relator-mediation/employs> a <https://blackcatinformatics.ca/logic/Role> .
<https://example.org/relator-mediation/employs> <https://blackcatinformatics.ca/logic/domain> <https://example.org/relator-mediation/Employment> .
<https://example.org/relator-mediation/employs> <https://blackcatinformatics.ca/logic/inverseOf> <https://example.org/relator-mediation/employedBy> .
<https://example.org/relator-mediation/employs> <https://blackcatinformatics.ca/logic/range> <https://example.org/relator-mediation/Person> .

# === Rules ===
